--- a/about.html
+++ b/about.html
@@ -54,8 +54,11 @@
             <div class="d-flex flex-column align-center mt-5">
                 <div class="p-4 p-xl-0">
                     <h1>Hi there!</h1>
-                    <p>My name is Katie, and I am passionate about creating an inclusive, seamless, and engaging online experience for all walks of life. I believe in diving deep into the digital realm to get an indepth understanding of what folks need in order to succeed in the online world.</p> 
-                    <p>For some, it is a fully accessible experience. For others, it is a beautifully designed, interactive website that wows them. I believe it is my job to find the perfect intersect between the two. To do that, I needed to learn UX Design, so that I could combine my coding skills with a deep understanding of user experience, in order to uncover more ways to do my job as best as I possibly can.</p>
+                    <p>I am a Designer & Developer with 3+ years experience & a passion for designing & building meaningful, functional, & accessible experiences.</p>
+
+                    <p>My name is Katie, and I am passionate about creating an inclusive, seamless, and engaging online experience for all walks of life. I believe in diving deep into the digital realm to get an indepth understanding of what folks need in order to succeed in the online world.</p>
+                        
+                    <p>For some, it is a fully accessible experience. For others, it is a beautifully designed, interactive website that wows them. I believe it is my job to find the perfect intersect between the two. To do that, I began the journey to learn Design, both graphical and UX. My hope is to combine my knowledge of both development and design, in order to provide a visually stunning. user-friendly, functional online experiences for folks of all categories.</p>
                 </div>
             </div>
         </section>
