--- a/index.html
+++ b/index.html
@@ -47,9 +47,59 @@
             <h2>My work</h2>
             <div class="cards d-flex flex-column mt-5 mb-5">
 
+                <a href="https://www.figma.com/proto/ezdzQJq112RiRHbMXre332/Mid-Fidelity-Wireframes?node-id=2%3A24&scaling=scale-down" target="_blank">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work yellow">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 32 40" style="enable-background:new 0 0 32 32;" xml:space="preserve"><path d="M8.5,12h-1c0,4.518,3.546,8.214,8,8.475V24.5H14c-2.481,0-4.5,2.019-4.5,4.5c0,0.276,0.224,0.5,0.5,0.5h12  c0.276,0,0.5-0.224,0.5-0.5c0-2.481-2.019-4.5-4.5-4.5h-1.5v-4.025c4.453-0.261,8-3.956,8-8.475h-1c0,4.136-3.364,7.5-7.5,7.5  S8.5,16.136,8.5,12z M21.465,28.5H10.536c0.243-1.694,1.704-3,3.464-3h4C19.76,25.5,21.221,26.806,21.465,28.5z"/><path d="M20.5,12V7c0-2.481-2.019-4.5-4.5-4.5S11.5,4.519,11.5,7v5c0,2.481,2.019,4.5,4.5,4.5S20.5,14.481,20.5,12z M12.5,12V7  c0-1.93,1.57-3.5,3.5-3.5s3.5,1.57,3.5,3.5v5c0,1.93-1.57,3.5-3.5,3.5S12.5,13.93,12.5,12z"/><text x="0" y="47" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Astatine Lab</text><text x="0" y="52" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+                        </div>
+                        <h4 class="card-title work">Character Illustration</h4>
+                        <h5 class="card-subtitle work">Design, Figma</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
+                <a href="https://www.figma.com/proto/ezdzQJq112RiRHbMXre332/Mid-Fidelity-Wireframes?node-id=2%3A24&scaling=scale-down" target="_blank">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work blue">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 32 40" style="enable-background:new 0 0 32 32;" xml:space="preserve"><path d="M8.5,12h-1c0,4.518,3.546,8.214,8,8.475V24.5H14c-2.481,0-4.5,2.019-4.5,4.5c0,0.276,0.224,0.5,0.5,0.5h12  c0.276,0,0.5-0.224,0.5-0.5c0-2.481-2.019-4.5-4.5-4.5h-1.5v-4.025c4.453-0.261,8-3.956,8-8.475h-1c0,4.136-3.364,7.5-7.5,7.5  S8.5,16.136,8.5,12z M21.465,28.5H10.536c0.243-1.694,1.704-3,3.464-3h4C19.76,25.5,21.221,26.806,21.465,28.5z"/><path d="M20.5,12V7c0-2.481-2.019-4.5-4.5-4.5S11.5,4.519,11.5,7v5c0,2.481,2.019,4.5,4.5,4.5S20.5,14.481,20.5,12z M12.5,12V7  c0-1.93,1.57-3.5,3.5-3.5s3.5,1.57,3.5,3.5v5c0,1.93-1.57,3.5-3.5,3.5S12.5,13.93,12.5,12z"/><text x="0" y="47" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Astatine Lab</text><text x="0" y="52" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+                        </div>
+                        <h4 class="card-title work">Portfolio Page</h4>
+                        <h5 class="card-subtitle work">Design</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
                 <a href="snowmountain.html">
                     <div class="card work" style="width: 100%;">
                         <div class="card-body work yellow">
+                            <svg class="skis" width="93" height="93" viewBox="0 0 93 93" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M83.5991 38.2238C83.5991 37.5585 84.1391 37.0186 84.8044 37.0186H87.0927V34.7045C87.0927 34.0392 87.6327 33.4993 88.298 33.4993C88.9633 33.4993 89.5032 34.0392 89.5032 34.7045V37.0186H91.7948C92.4601 37.0186 93 37.5585 93 38.2238C93 38.8891 92.4601 39.4291 91.7948 39.4291H89.5032V41.6949C89.5032 42.3602 88.9633 42.9002 88.298 42.9002C87.6327 42.9002 87.0927 42.3602 87.0927 41.6949V39.4291H84.8044C84.1391 39.4291 83.5991 38.8891 83.5991 38.2238Z" fill="black"/>
+                                <path d="M53.198 4.76314C53.198 4.09784 53.7379 3.55789 54.4032 3.55789H56.6948V1.24382C56.6948 0.578524 57.2348 0.0385742 57.9001 0.0385742C58.5654 0.0385742 59.1053 0.578524 59.1053 1.24382V3.55789H61.3937C62.059 3.55789 62.5989 4.09784 62.5989 4.76314C62.5989 5.42843 62.059 5.96838 61.3937 5.96838H59.1053V8.23425C59.1053 8.89954 58.5654 9.43949 57.9001 9.43949C57.2348 9.43949 56.6948 8.89954 56.6948 8.23425V5.96838H54.4032C53.7379 5.96838 53.198 5.42843 53.198 4.76314Z" fill="black"/>
+                                <path d="M70.3767 28.6269C72.1862 28.6269 73.6582 27.1549 73.6582 25.3454C73.6582 23.536 72.1862 22.064 70.3767 22.064C68.5672 22.064 67.0952 23.536 67.0952 25.3454C67.0952 27.1549 68.5672 28.6269 70.3767 28.6269ZM70.3767 24.4777C70.8556 24.4777 71.2477 24.8666 71.2477 25.3487C71.2477 25.8308 70.8588 26.2197 70.3767 26.2197C69.8946 26.2197 69.5057 25.8308 69.5057 25.3487C69.5057 24.8666 69.8978 24.4777 70.3767 24.4777Z" fill="black"/>
+                                <path d="M3.74462 6.55975C5.55409 6.55975 7.0261 5.08775 7.0261 3.27827C7.0261 1.46879 5.55088 0 3.74462 0C1.93836 0 0.463135 1.47201 0.463135 3.28148C0.463135 5.09096 1.93514 6.55975 3.74462 6.55975ZM3.74462 2.41049C4.2235 2.41049 4.61561 2.79939 4.61561 3.28148C4.61561 3.76358 4.2235 4.14926 3.74462 4.14926C3.26573 4.14926 2.87363 3.76037 2.87363 3.28148C2.87363 2.8026 3.26252 2.41049 3.74462 2.41049Z" fill="black"/>
+                                <path d="M89.3909 85.9453C87.5814 85.9453 86.1094 87.4173 86.1094 89.2268C86.1094 91.0363 87.5814 92.5083 89.3909 92.5083C91.2003 92.5083 92.6723 91.0363 92.6723 89.2268C92.6723 87.4173 91.1971 85.9453 89.3909 85.9453ZM89.3909 90.0978C88.912 90.0978 88.5199 89.7089 88.5199 89.2268C88.5199 88.7447 88.9088 88.3558 89.3909 88.3558C89.873 88.3558 90.2618 88.7447 90.2618 89.2268C90.2618 89.7089 89.8697 90.0978 89.3909 90.0978Z" fill="black"/>
+                                <path d="M89.5837 14.3664C91.3932 14.3664 92.8652 12.8944 92.8652 11.0849C92.8652 9.27547 91.3932 7.80347 89.5837 7.80347C87.7743 7.80347 86.3022 9.27547 86.3022 11.0849C86.3022 12.8944 87.7775 14.3664 89.5837 14.3664ZM89.5837 10.2172C90.0626 10.2172 90.4547 10.6061 90.4547 11.0882C90.4547 11.5703 90.0658 11.9592 89.5837 11.9592C89.1016 11.9592 88.7127 11.5703 88.7127 11.0882C88.7127 10.6061 89.1048 10.2172 89.5837 10.2172Z" fill="black"/>
+                                <path d="M9.86405 51.6394C9.86405 52.3047 9.3241 52.8446 8.65881 52.8446H6.37045V55.1587C6.37045 55.824 5.8305 56.3639 5.1652 56.3639C4.49991 56.3639 3.95996 55.824 3.95996 55.1587V52.8446H1.66838C1.00308 52.8446 0.463135 52.3047 0.463135 51.6394C0.463135 50.9741 1.00308 50.4341 1.66838 50.4341H3.95996V48.1683C3.95996 47.503 4.49991 46.963 5.1652 46.963C5.8305 46.963 6.37045 47.503 6.37045 48.1683V50.4341H8.65881C9.3241 50.4341 9.86405 50.9741 9.86405 51.6394Z" fill="black"/>
+                                <path d="M43.1602 87.7838C43.1602 88.4491 42.6202 88.989 41.955 88.989H39.6666V91.3031C39.6666 91.9684 39.1266 92.5083 38.4613 92.5083C37.796 92.5083 37.2561 91.9684 37.2561 91.3031V88.989H34.9645C34.2992 88.989 33.7593 88.4491 33.7593 87.7838C33.7593 87.1185 34.2992 86.5785 34.9645 86.5785H37.2561V84.3127C37.2561 83.6474 37.796 83.1074 38.4613 83.1074C39.1266 83.1074 39.6666 83.6474 39.6666 84.3127V86.5785H41.955C42.6202 86.5785 43.1602 87.1185 43.1602 87.7838Z" fill="black"/>
+                                <path d="M22.8415 65.9927C21.0321 65.9927 19.5601 67.4647 19.5601 69.2742C19.5601 71.0836 21.0321 72.5556 22.8415 72.5556C24.651 72.5556 26.123 71.0836 26.123 69.2742C26.123 67.4647 24.6478 65.9927 22.8415 65.9927ZM22.8415 70.1419C22.3627 70.1419 21.9706 69.753 21.9706 69.2709C21.9706 68.7888 22.3594 68.4 22.8415 68.4C23.3236 68.4 23.7125 68.7888 23.7125 69.2709C23.7125 69.753 23.3204 70.1419 22.8415 70.1419Z" fill="black"/>
+                                <path d="M3.28148 78.177C1.47201 78.177 0 79.649 0 81.4585C0 83.268 1.47201 84.74 3.28148 84.74C5.09096 84.74 6.56297 83.268 6.56297 81.4585C6.56297 79.649 5.08775 78.177 3.28148 78.177ZM3.28148 82.3295C2.8026 82.3295 2.41049 81.9406 2.41049 81.4585C2.41049 80.9764 2.79939 80.5875 3.28148 80.5875C3.76358 80.5875 4.15247 80.9764 4.15247 81.4585C4.15247 81.9406 3.76037 82.3295 3.28148 82.3295Z" fill="black"/>
+                                <path d="M67.3749 82.3103C69.554 79.8452 70.9296 77.004 69.4833 75.5545C68.0273 74.1147 65.1894 75.487 62.7275 77.6629L12.4478 27.3865L13.2063 26.628C13.6756 26.1587 13.6756 25.3938 13.2063 24.9246L8.48496 20.1968C7.8261 19.5411 6.95189 19.1812 6.01983 19.1812H6.01662C5.08456 19.1812 4.21036 19.5443 3.55792 20.1968C2.90226 20.8556 2.53908 21.7266 2.53908 22.6587C2.53587 23.594 2.89905 24.4714 3.55792 25.1302L8.28248 29.8516C8.5171 30.0862 8.82565 30.2019 9.13419 30.2019C9.44273 30.2019 9.75128 30.0862 9.98911 29.8516L10.7444 29.0963L61.0176 79.3695C58.8385 81.8347 57.4629 84.6758 58.9125 86.1253C59.3271 86.5367 59.8542 86.7231 60.452 86.7231C61.9529 86.7231 63.8909 85.5565 65.649 84.0041L71.5531 89.9082C71.7877 90.1428 72.0995 90.2585 72.408 90.2585C72.7165 90.2585 73.0251 90.1428 73.2629 89.9082C73.7322 89.439 73.7322 88.6708 73.2629 88.2016L67.3749 82.3103ZM5.26133 23.4204C5.05885 23.2211 4.94958 22.9512 4.94958 22.6619C4.94958 22.3726 5.05885 22.1059 5.26133 21.9034C5.46381 21.7009 5.73057 21.5916 6.01662 21.5916C6.30267 21.5916 6.57585 21.7009 6.77834 21.9034L10.648 25.7763L9.89269 26.5315C9.89269 26.5315 9.88948 26.5315 9.88626 26.5348C9.88626 26.5348 9.88626 26.538 9.88305 26.5412L9.12776 27.2965L5.26133 23.4204ZM67.6416 77.3929C67.5002 77.9907 66.8735 79.1831 65.6522 80.5908L64.4437 79.3824C65.8547 78.1643 67.0471 77.5343 67.6416 77.3929ZM60.7509 84.2837C60.8923 83.6859 61.5222 82.4967 62.7403 81.089L63.9488 82.2975C62.541 83.5156 61.3487 84.1423 60.7509 84.2837Z" fill="black"/>
+                                <path d="M89.1276 72.3372C89.3622 72.5718 89.674 72.6875 89.9825 72.6875C90.2911 72.6875 90.5996 72.5718 90.8375 72.3372C91.3067 71.8679 91.3067 71.0998 90.8375 70.6305L84.9462 64.7393C87.1253 62.2742 88.5009 59.433 87.0546 57.9835C85.6019 56.5468 82.7639 57.9192 80.2988 60.0919L30.0159 9.81221L30.7744 9.05371C31.2437 8.58447 31.2437 7.81954 30.7744 7.35029L26.0563 2.62894C25.3974 1.97329 24.52 1.61011 23.5879 1.61011H23.5847C22.6527 1.61011 21.7785 1.97329 21.126 2.62573C20.4736 3.2846 20.1072 4.15559 20.1072 5.08764C20.104 6.02292 20.4704 6.90033 21.1292 7.5592L25.8538 12.2806C26.0788 12.5055 26.3841 12.6309 26.7055 12.6309C27.0269 12.6309 27.3322 12.5023 27.5604 12.2773L28.3157 11.5221L78.6082 61.8146C77.1812 63.4312 75.886 65.4174 75.8892 66.9923C75.8892 67.7894 76.217 68.2811 76.4902 68.5543C76.9048 68.9657 77.4351 69.1521 78.0329 69.1521C79.5307 69.1521 81.4687 67.9854 83.2267 66.4363L89.1276 72.3372ZM22.8327 5.85257C22.627 5.65009 22.5177 5.38012 22.5177 5.09086C22.5177 4.8016 22.627 4.53484 22.8327 4.33236C23.0319 4.12988 23.2987 4.0206 23.5879 4.0206C23.8772 4.0206 24.1472 4.12988 24.3497 4.33557L28.2193 8.202L27.464 8.9605H27.4608V8.96371L26.7023 9.72222L22.8327 5.85257ZM85.213 59.8251C85.0716 60.4229 84.4448 61.6153 83.2267 63.023L82.0183 61.8113C83.426 60.5932 84.6152 59.9633 85.213 59.8251ZM78.3254 66.7127C78.4668 66.1149 79.0935 64.9257 80.3116 63.518L81.5201 64.7264C80.1092 65.9445 78.92 66.5745 78.3254 66.7127Z" fill="black"/>
+                                </svg>
+                                
+                        </div>
+                        <h4 class="card-title work">Snow Mountain</h4>
+                        <h5 class="card-subtitle work">Graphic Design, Logo Design, Web Design</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
+                <a href="https://kaitlynbro.github.io/snowmountain/" target="_blank">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work blue">
                             <svg width="66" height="53" viewBox="0 0 66 53" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M19.9042 25.9505L27.1285 15.6631L34.3551 25.9527C29.7705 23.9718 24.4857 23.9703 19.9042 25.9505Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M2.44897 50.8025L27.1271 15.6636L39.4665 33.2341L34.8403 39.8203L30.2141 33.2327L17.8746 50.8025H2.44897Z" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -70,7 +120,24 @@
                                 </svg>
                         </div>
                         <h4 class="card-title work">Snow Mountain</h4>
-                        <h5 class="card-subtitle work">Graphic Design</h5>
+                        <h5 class="card-subtitle work">PSD to HTML, Development, Design</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
+                <a href="https://www.figma.com/proto/lNmtJNrgMCaWbbaBNWzUEC/Christmas-Icons?node-id=110%3A26&scaling=min-zoom">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work yellow">
+                            <svg class="tree-svg" width="251" height="379" viewBox="0 0 251 379" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M125.457 95.5865L250.913 304.681H0.000221046L125.457 95.5865Z" fill="#B99095"/>
+                                <path d="M125.457 47.7927L227.017 215.068H23.8968L125.457 47.7927Z" fill="#3D5B59"/>
+                                <rect x="119.483" y="304.681" width="16.3293" height="73.4817" fill="#FCB5AC"/>
+                                <path d="M125.457 0L197.146 119.482H53.7672L125.457 0Z" fill="#FCB5AC"/>
+                                </svg>
+                        </div>
+                        <h4 class="card-title work">SVG Package, Christmas Edition</h4>
+                        <h5 class="card-subtitle work">Graphic Design, Icon Design</h5>
                     </div>
                 </a>
             </div>
