--- a/index.html
+++ b/index.html
@@ -45,6 +45,40 @@
         </header>
         <section class="page-section card-section mt-3 mt-md-0" id="work">
             <h2>My work</h2>
+
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
+                <a href="https://www.figma.com/proto/k1CfnOSiX7QJdaI2L5fPHI/Untitled?node-id=25%3A766&scaling=min-zoom" target="_blank">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work yellow">
+                            <svg width="48" height="57" viewBox="0 0 48 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M24 56.625C24 50.0417 26.3333 44.3958 31 39.6875C35.6667 34.9792 41.3333 32.625 48 32.625C48 39.2917 45.6667 44.9583 41 49.625C36.3333 54.2917 30.6667 56.625 24 56.625ZM6.875 25.375C6.875 22.5417 8.16667 20.5417 10.75 19.375C8.16667 18.125 6.875 16.125 6.875 13.375C6.875 11.5417 7.54167 9.95833 8.875 8.625C10.2083 7.29167 11.7917 6.625 13.625 6.625C15.0417 6.625 16.2917 7.04167 17.375 7.875V7.375C17.375 5.54167 18.0208 3.95833 19.3125 2.625C20.6042 1.29167 22.1667 0.625 24 0.625C25.8333 0.625 27.3958 1.29167 28.6875 2.625C29.9792 3.95833 30.625 5.54167 30.625 7.375V7.875C31.7917 7.04167 33.0417 6.625 34.375 6.625C36.2083 6.625 37.7917 7.29167 39.125 8.625C40.4583 9.95833 41.125 11.5417 41.125 13.375C41.125 16.125 39.8333 18.125 37.25 19.375C39.8333 20.5417 41.125 22.5417 41.125 25.375C41.125 27.2083 40.4583 28.7708 39.125 30.0625C37.7917 31.3542 36.2083 32 34.375 32C32.9583 32 31.7083 31.625 30.625 30.875V31.375C30.625 33.2083 29.9792 34.7708 28.6875 36.0625C27.3958 37.3542 25.8333 38 24 38C22.1667 38 20.6042 37.3542 19.3125 36.0625C18.0208 34.7708 17.375 33.2083 17.375 31.375V30.875C16.2083 31.625 14.9583 32 13.625 32C11.7917 32 10.2083 31.3542 8.875 30.0625C7.54167 28.7708 6.875 27.2083 6.875 25.375ZM24 12.625C22.1667 12.625 20.6042 13.2917 19.3125 14.625C18.0208 15.9583 17.375 17.5417 17.375 19.375C17.375 21.2083 18.0208 22.7708 19.3125 24.0625C20.6042 25.3542 22.1667 26 24 26C25.8333 26 27.3958 25.3542 28.6875 24.0625C29.9792 22.7708 30.625 21.2083 30.625 19.375C30.625 17.5417 29.9792 15.9583 28.6875 14.625C27.3958 13.2917 25.8333 12.625 24 12.625ZM0 32.625C6.66667 32.625 12.3333 34.9792 17 39.6875C21.6667 44.3958 24 50.0417 24 56.625C17.3333 56.625 11.6667 54.2917 7 49.625C2.33333 44.9583 0 39.2917 0 32.625Z" fill="black"/>
+                                </svg>
+                                
+                        </div>
+                        <h4 class="card-title work">Flat Design Illustration, Flower Power</h4>
+                        <h5 class="card-subtitle work">Graphic Design, Illustration</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="cards d-flex flex-column mt-5 mb-5">
+
+                <a href="https://www.figma.com/proto/OXXG9tOfx1rFoYPxjS32sC/Untitled?node-id=36%3A2&scaling=scale-down" target="_blank">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work blue">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15.0697 5.5C14.7424 4.5777 14.2376 3.72839 13.584 3C12.21 1.46675 10.2157 0.5 8 0.5C5.784 0.5 3.79 1.46675 2.416 3C1.76235 3.72839 1.25761 4.5777 0.93025 5.5C0.6525 6.28225 0.5 7.1235 0.5 8C0.5 8.8765 0.65225 9.71775 0.93 10.5C1.25747 11.4222 1.76211 12.2715 2.4155 13C3.78975 14.5332 5.78375 15.5 8 15.5C10.216 15.5 12.21 14.5332 13.5845 13C14.2378 12.2713 14.7425 11.4221 15.0702 10.5C15.3477 9.71775 15.5 8.8765 15.5 8C15.5 7.1235 15.3477 6.28225 15.0697 5.5V5.5ZM1.90625 8C1.90625 7.1085 2.10425 6.26375 2.45 5.5C2.90593 4.49413 3.62541 3.6303 4.53225 3C5.336 2.441 6.277 2.066 7.297 1.94825V7.6495L3.19925 11.7465C2.89913 11.3625 2.64592 10.944 2.445 10.5C2.08919 9.71462 1.9055 8.86222 1.90625 8V8ZM7.297 14.0522C6.15748 13.9206 5.07871 13.4683 4.186 12.748L7.29675 9.63775V14.0522H7.297ZM8.70325 14.0522V9.63775L11.8135 12.748C10.921 13.4682 9.8425 13.9205 8.70325 14.0522V14.0522ZM12.8007 11.7465L8.70325 7.6495V1.94825C9.72325 2.066 10.6637 2.441 11.4675 3C12.3745 3.63028 13.0941 4.49411 13.5503 5.5C13.9076 6.28486 14.0929 7.13711 14.0937 7.99951C14.0945 8.86191 13.9107 9.71449 13.5548 10.5C13.3539 10.944 13.1008 11.3625 12.8007 11.7465" fill="black"/>
+                                </svg>
+                        </div>
+                        <h4 class="card-title work">Flat Design Illustration, Groovy</h4>
+                        <h5 class="card-subtitle work">Graphic Design, Illustration</h5>
+                    </div>
+                </a>
+            </div>
+
+            
+
             <div class="cards d-flex flex-column mt-5 mb-5">
 
                 <a href="https://www.figma.com/proto/zHpIMz9XH21w1rJf8KF0OP/Girl-Walking?node-id=14%3A0&scaling=min-zoom" target="_blank">
